--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -20,35 +20,46 @@ env:
     CONFIG_DIRECTORY: "./terraform/environments/${{ github.event.inputs.environment }}/"
 
 jobs:
-    terraform:
-        if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
-        name: "Terraform Plan"
-        runs-on: ubuntu-latest
-        permissions:
-            contents: read
-            pull-requests: write
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+  terraform:
+    if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
+    name: "Terraform Plan"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-            - name: Upload Configuration
-              uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
-              id: plan-upload
-              with:
-                workspace: ${{ env.TF_WORKSPACE }}
-                directory: ${{ env.CONFIG_DIRECTORY }}
-                speculative: true
+      - name: Upload Configuration
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+        id: plan-upload
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          directory: ${{ env.CONFIG_DIRECTORY }}
+          speculative: true
 
-            - name: Create Plan Run
-              uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
-              id: plan-run
-              with:
-                workspace: ${{ env.TF_WORKSPACE }}
-                configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
-                plan_only: true
+      # THÊM BƯỚC NÀY VÀO ĐÂY
+      - name: Set Terraform Variables
+        uses: hashicorp/tfc-workflows-github/actions/set-variables@v1.0.0
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          variables: |
+            {
+              "node_iam_role_arn": "${{ secrets.NODE_IAM_ROLE_ARN }}",
+              "cluster_iam_role_arn": "${{ secrets.CLUSTER_IAM_ROLE_ARN }}"
+            }
 
-            - name: Get Plan Output
-              uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
-              id: plan-output
-              with:
-                plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
+      - name: Create Plan Run
+        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+        id: plan-run
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
+          plan_only: true
+
+      - name: Get Plan Output
+        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
+        id: plan-output
+        with:
+          plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
